Refactor: Migrate to Astro + Bun

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,17 @@ Annotations/
 # IDEs
 .vscode/
 .idea/
+
+# Astro
+
+dist/
+.astro/
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.env
+.env.production
+.DS_Store
+
